[project]
name = "cloud-courier-infrastructure"
version = "0.1.0"
description = "Managing the Cloud Infrastructure for a Cloud Courier deployment"

readme = "README.md"
requires-python = ">=3.12.7"

dependencies = [
    # Specific to this template



    # Managed by upstream template
    "pulumi>=3.156.0",
    "pulumi-aws>=6.72.0",
    "pulumi-aws-native>=1.26.0",
    "pulumi-command>=1.0.2",
    "ephemeral-pulumi-deploy>=0.0.4",
    "boto3>=1.37.11",
    "pydantic>=2.10.6",
]


[dependency-groups]
dev = [
    # Specific to this template



    # Managed by upstream template
    "pyright>=1.1.397",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "boto3-stubs[all]==1.37.11", # there's a bug/conflict in 1.37.4 affecting pyright: https://github.com/LabAutomationAndScreening/copier-cloud-courier-infrastructure/actions/runs/13596390146/job/38014193360#step:11:69
]



[tool.uv]
package = true
